--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jason Lu
+  url:               https://github.com/PoisonNinja
+  email:             jasonbangbang@gmail.com
 
 # Custom vars
 version:             1.0.0
